--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "resolve-url-loader": "^3.1.0"
     },
     "dependencies": {
-        "@mdi/font": "^5.8.55"
+        "@mdi/font": "^5.8.55",
+        "twilio-cli": "^2.13.0"
     }
 }
